[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymassbank"
version = "0.0.1"
authors = [
  { name="Kozo Nishida", email="kozo.nishida@gmail.com" },
]
description = "A MassBank record parser (currently, but additional functionalities like those in RMassBank might be added in the future)."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "pandas"
]

[project.urls]
Homepage = "https://github.com/kozo2/pymassbank"
Issues = "https://github.com/kozo2/pymassbank/issues"
